# COS214-GroupProject

./: .gitignore  AerodynamicsProduct_8cpp.html  AerodynamicsProduct_8cpp__incl.map  AerodynamicsProduct_8cpp__incl.md5  AerodynamicsProduct_8h.html  AerodynamicsProduct_8h__dep__incl.map  AerodynamicsProduct_8h__dep__incl.md5  AerodynamicsProduct_8h__incl.map  AerodynamicsProduct_8h__incl.md5  AerodynamicsProduct_8h_source.html  AerodynamicsSimulationAdapter_8cpp.html  AerodynamicsSimulationAdapter_8cpp__incl.map  AerodynamicsSimulationAdapter_8cpp__incl.md5  AerodynamicsSimulationAdapter_8h.html  AerodynamicsSimulationAdapter_8h__dep__incl.map  AerodynamicsSimulationAdapter_8h__dep__incl.md5  AerodynamicsSimulationAdapter_8h__incl.map  AerodynamicsSimulationAdapter_8h__incl.md5  AerodynamicsSimulationAdapter_8h_source.html  AerodynamicsTeam_8cpp.html  AerodynamicsTeam_8cpp__incl.map  AerodynamicsTeam_8cpp__incl.md5  AerodynamicsTeam_8h.html  AerodynamicsTeam_8h__dep__incl.map  AerodynamicsTeam_8h__dep__incl.md5  AerodynamicsTeam_8h__incl.map  AerodynamicsTeam_8h__incl.md5  AerodynamicsTeam_8h_source.html  Aggressive_8cpp.html  Aggressive_8cpp__incl.map  Aggressive_8cpp__incl.md5  Aggressive_8h.html  Aggressive_8h__dep__incl.map  Aggressive_8h__dep__incl.md5  Aggressive_8h__incl.map  Aggressive_8h__incl.md5  Aggressive_8h_source.html  CMakeLists.txt  CarPartContainer_8cpp.html  CarPartContainer_8cpp__incl.map  (+1002 more)
.github/workflows/: codeql-analysis.yml  main.yaml
System/: AerodynamicsProduct.cpp  AerodynamicsProduct.d  AerodynamicsProduct.h  AerodynamicsSimulationAdapter.cpp  AerodynamicsSimulationAdapter.d  AerodynamicsSimulationAdapter.h  AerodynamicsTeam.cpp  AerodynamicsTeam.d  AerodynamicsTeam.h  Aggressive.cpp  Aggressive.d  Aggressive.h  Aircraft.cpp  Aircraft.h  AircraftCreator.cpp  AircraftCreator.h  CarPart.cpp  CarPart.d  CarPart.h  CarPartContainer.cpp  CarPartContainer.d  CarPartContainer.h  CarPartSimulationAdapter.cpp  CarPartSimulationAdapter.d  CarPartSimulationAdapter.h  CarPartSimulator.cpp  CarPartSimulator.d  CarPartSimulator.h  CarPartsContainer.h  CarShipment.cpp  CarShipment.h  CarSimulationAdapter.cpp  CarSimulationAdapter.d  CarSimulationAdapter.h  CarSimulator.cpp  CarSimulator.d  CarSimulator.h  CateringCreator.cpp  CateringCreator.h  CateringEquipment.cpp  (+199 more)
VPP/: COS214_Project.vpp  COS214_Project.vpp.bak_000f  COS214_Project.vpp.bak_002d  COS214_Project.vpp.bak_003d  COS214_Project.vpp.bak_004d  COS214_Project.vpp.bak_005d  COS214_Project.vpp.bak_006d  COS214_Project.vpp.bak_007d  COS214_Project.vpp.bak_008d  COS214_Project.vpp.bak_009d  COS214_Project.vpp.bak_010d  COS214_Project.vpp.bak_011d  COS214_Project.vpp.bak_012d  COS214_Project.vpp.bak_013d  COS214_Project.vpp.bak_014d  COS214_Project.vpp.bak_015d  COS214_Project.vpp.bak_016d  COS214_Project.vpp.bak_017d  COS214_Project.vpp.bak_018d  COS214_Project.vpp.bak_019d  COS214_Project.vpp.bak_020d  COS214_Project_1.vpp  Final engineering.vpp
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  files_0.js  files_1.js  files_10.js  files_11.js  (+38 more)
