# cmake_minimum_required(VERSION <specify CMake version here>)
project(COS214_GroupProject)

set(CMAKE_CXX_STANDARD 14)

include_directories(System)

add_executable(COS214_GroupProject
        System/AerodynamicsProduct.cpp
        System/AerodynamicsProduct.h
        System/AerodynamicsSimulationAdapter.cpp
        System/AerodynamicsSimulationAdapter.h
        System/AerodynamicsTeam.cpp
        System/AerodynamicsTeam.h
        System/Aggressive.cpp
        System/Aggressive.h
        System/CarPart.cpp
        System/CarPart.h
        System/CarPartContainer.cpp
        System/CarPartContainer.h
        System/CarPartSimulationAdapter.cpp
        System/CarPartSimulationAdapter.h
        System/CarPartSimulator.cpp
        System/CarPartSimulator.h
        System/CarSimulationAdapter.cpp
        System/CarSimulationAdapter.h
        System/CarSimulator.cpp
        System/CarSimulator.h
        System/CateringEquipment.cpp
        System/CateringEquipment.h
        System/CharteredFlight.cpp
        System/CharteredFlight.h
        System/ChassisProduct.cpp
        System/ChassisProduct.h
        System/ChassisSimulationAdapter.cpp
        System/ChassisSimulationAdapter.h
        System/ChassisTeam.cpp
        System/ChassisTeam.h
        System/Components.cpp
        System/Components.h
        System/Computer.cpp
        System/Computer.h
        System/Container.cpp
        System/Container.h
        System/CsSimulation.cpp
        System/CsSimulation.h
        System/Drill.cpp
        System/Drill.h
        System/ElectronicsProduct.cpp
        System/ElectronicsProduct.h
        System/ElectronicsSimulationAdapter.cpp
        System/ElectronicsSimulationAdapter.h
        System/ElectronicsTeam.cpp
        System/ElectronicsTeam.h
        System/Engineer.h
        System/EngineeringStore.cpp
        System/EngineeringStore.h
        System/EngineeringTeam.cpp
        System/EngineeringTeam.h
        System/EngineProduct.cpp
        System/EngineProduct.h
        System/EngineSimulationAdapter.cpp
        System/EngineSimulationAdapter.h
        System/EngineTeam.cpp
        System/EngineTeam.h
        System/Equipment.h
        System/EquipmentComposite.cpp
        System/EquipmentComposite.h
        System/EquipmentContainer.cpp
        System/EquipmentContainer.h
        System/Euipment.cpp
        System/FinalHandler.cpp
        System/FinalHandler.h
        System/FoodCrate.cpp
        System/FoodCrate.h
        System/FuelTank.cpp
        System/FuelTank.h
        System/GarageEquipment.cpp
        System/GarageEquipment.h
        System/Inactive.cpp
        System/Inactive.h
        System/Jack.cpp
        System/Jack.h
        System/LaidBack.cpp
        System/LaidBack.h
        System/LogisticsTeam.cpp
        System/LogisticsTeam.h
        System/main.cpp
        System/Neutral.cpp
        System/Neutral.h
        System/PartsContainer.cpp
        System/PartsContainer.h
        System/PracticeHandler.cpp
        System/PracticeHandler.h
        System/QualifyingHandler.cpp
        System/QualifyingHandler.h
        System/Race.cpp
        System/Race.h
        System/RaceCar.cpp
        System/RaceCar.h
        System/RaceHandler.cpp
        System/RaceHandler.h
        System/RaceState.cpp
        System/RaceState.h
        System/RaceTrack.cpp
        System/RaceTrack.h
        System/RaceTrackSimulationAdapter.cpp
        System/RaceTrackSimulationAdapter.h
        System/RaceTrackSimulator.cpp
        System/RaceTrackSimulator.h
        System/RacingStrategy.cpp
        System/RacingStrategy.h
        System/Radio.cpp
        System/Radio.h
        System/Refrigerator.cpp
        System/Refrigerator.h
        System/Ship.cpp
        System/Ship.h
        System/ShipCreator.cpp
        System/ShipCreator.h
        System/Shipment.cpp
        System/Shipment.h
        System/Simulation_Demo_Main.cpp
        System/Simulator.cpp
        System/Simulator.h
        System/Subscriber.h
        System/Team.cpp
        System/Team.h
        System/Testing.cpp
        System/Testing.h
        System/ToolEquipment.cpp
        System/ToolEquipment.h
        System/Transport.h
        System/TransportCreator.cpp
        System/TransportCreator.h
        System/Truck.cpp
        System/Truck.h
        System/TruckCreator.cpp
        System/TruckCreator.h
        System/VirtualCarPart.cpp
        System/VirtualCarPart.h
        System/VirtualRaceCar.cpp
        System/VirtualRaceCar.h
        System/VirtualRaceTrack.cpp
        System/VirtualRaceTrack.h
        System/WaterTank.cpp
        System/WaterTank.h
        System/WindTunnel.cpp
        System/WindTunnel.h
        System/Wrench.cpp
        System/Wrench.h)
